corrected border settings for collapsed and expanded content

--- a/frontend/css/settings.css
+++ b/frontend/css/settings.css
@@ -140,9 +140,7 @@ div.setting-box[draggable="false"] .collapsible-button.active {
   padding: 0 18px;
   overflow: hidden;
   background-color: whitesmoke;
-  border: 1px solid black;
-  border-radius: 0px 0px 15px 15px;
-  border-top: none;
+  border: none;
 }
 
 .collapsible-content.collapsed {
@@ -153,6 +151,9 @@ div.setting-box[draggable="false"] .collapsible-button.active {
 .collapsible-content.expanded {
   max-height: 100px;
   transition: max-height 0.2s ease-out;
+  border: 1px solid black;
+  border-radius: 0px 0px 15px 15px;
+  border-top: none;
 }
 
 /************************************/
